--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,11 @@
     <div class="offset">
     <h1 class="fattext">CONTACT UPSILAMBA</h1>
     <h2 class="contact">Call us at:</h2>
-    <p class="main-content">1800-your mom sucked my pee pee last night</p>
+    <h2 class="contact">Tweet us at:</h2>
+    <h2 class="contact">Email us at:</h2>
+    <p class="contact">(612)-790-0434</p>
+    <p class="contact">@nopechef</p>
+    <p class="contact">epet2202@mpsedu.org</p>
     </div>
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
