--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
     </div>
     <div class="offset">
     <h1 class="fattext">CONTACT UPSILAMBA</h1>
-    <h2 class="contact">Call us at:</h2>
+    <h2 class="contact-phone">Call us at:</h2>
     <h2 class="contact">Tweet us at:</h2>
-    <h2 class="contact">Email us at:</h2>
+    <h2 class="contact-email">Email us at:</h2>
     <p class="contact">(612)-790-0434</p>
     <p class="contact">@nopechef</p>
     <p class="contact">epet2202@mpsedu.org</p>
@@ -53,6 +53,7 @@ body {
     padding: 20px;
     color: #2d132c;
     background-color: #c72c41;
+    font-family: 'Lexend Deca', sans-serif;
   }
   #nav-bar {
     position: fixed;
@@ -111,10 +112,22 @@ body {
   a:hover {
     text-decoration: underline #801336;
   }
-    
+
+  .contact-phone {
+    width: 33.3%;
+    text-align: center;
+    float: left;
+  }
+
   .contact {
     width: 33.3%;
     text-align: center;
+  }
+
+  .contact-email {
+    width: 33.3%;
+    text-align: center;
+    float: right;
   }
   </style>
 </html>
