--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,9 @@
     <div class="offset">
     <h1 class="fattext">CONTACT UPSILAMBA</h1>
     </div>
-
-    <h2 class="contact">Call us at:</h2>
-    <h2 class="contact">Tweet us at:</h2>
-    <h2 class="contact">Email us at:</h2>
-    <p class="contact">(612)-790-0434</p>
-    <p class="contact">@nopechef</p>
-    <p class="contact">epet2202@mpsedu.org</p>
-
+    <div class="contact-div">Call us at:</div>
+    <div class="contact-div">Tweet us at:</div>
+    <div class="contact-div">Email us at:</div>
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
     </div>
@@ -118,7 +113,16 @@ body {
   .contact {
     width: 33.3%;
     text-align: center;
+    float: left;
+    position: relative;
+    top: 50px;
+    margin: 20px 10px;
+    padding: 20px;
+    color: #2d132c;
+    background-color: #c72c41;
+    font-family: 'Lexend Deca', sans-serif;
   }
+
 
   </style>
 </html>
