--- a/contact.html
+++ b/contact.html
@@ -13,12 +13,15 @@
       <a href="about.html"><div class="gridthing">ABOUT</div></a>
       <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
+
     <div class="offset">
-    <h1 class="fattext">CONTACT UPSILAMBA</h1>
+      <h1 class="fattext">CONTACT UPSILAMBA</h1>
     </div>
+
     <div class="contact-div">Call us at:</div>
     <div class="contact-div">Tweet us at:</div>
     <div class="contact-div">Email us at:</div>
+    
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
     </div>
@@ -110,7 +113,8 @@ body {
     text-decoration: underline #801336;
   }
   .contact {
-    width: 33.3%;
+    width: calc(33% - 56px);
+    height: 100px;
     text-align: center;
     float: left;
     position: relative;
@@ -119,7 +123,6 @@ body {
     padding: 20px;
     color: #2d132c;
     background-color: #c72c41;
-    font-family: 'Lexend Deca', sans-serif;
   }
 
   </style>
