--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
       <h1 class="fattext">CONTACT UPSILAMBA</h1>
     </div>
 
-    <div class="contact-div">Call us at:</div>
-    <div class="contact-div">Tweet us at:</div>
-    <div class="contact-div">Email us at:</div>
-    
+    <div class="contact">Call us at:</div>
+    <div class="contact">Tweet us at:</div>
+    <div class="contact">Email us at:</div>
+
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
     </div>
