--- a/contact.html
+++ b/contact.html
@@ -123,6 +123,8 @@ body {
     padding: 20px;
     color: #2d132c;
     background-color: #c72c41;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 36px;
   }
 
   </style>
