--- a/idiot-shirt.html
+++ b/idiot-shirt.html
@@ -20,6 +20,7 @@
     <p>This shirt was inspired by my friend ethan.</p><br>
     <p>COST:</p>
     <p class="cost">$79</p>
+    <p>to purchase please email send.me.ur.food@gmail.com</p>
 
     <div id="footer">
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
