--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <div class="contact">Email us at:</div>
 
     <div id="footer">
-      <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
+      <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
     </div>
   </body>
   <style>
