--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p id="definition">1. happiness and excitement</p>
     <p>UPSILAMBA is more than just a clothing brand. It is a message, a movement, and a money laundering buisness. Please buy our products to fund our criminal enterprise!</p>
     <div id="footer">
-      <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
+      <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
     </div>
   </body>
   <style>
