--- a/shop.html
+++ b/shop.html
@@ -33,7 +33,7 @@
     <p class="shop-item-title">frog in space Shirt</p>
   </div>
   <div id="footer">
-    <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
+    <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
   </div>
 </body>
 <style>
