--- a/shop.html
+++ b/shop.html
@@ -19,11 +19,11 @@
     </p>
   </div>
   <div class="grid-container">
-    <a href="idiot-shirt.html"><img src="images\Idiot.png" class="grid-item"></a>
-    <img src="images\Please buy this.png" class="grid-item">
+    <a href="idiot-shirt.html" target="_blank"><img src="images\Idiot.png" class="grid-item"></a>
+    <a href="Please buy this.html" target="_blank"><img src="images\Please buy this.png" class="grid-item"></a>
     <img src="images\I paid money for this.png" class="grid-item">
-    <a href="idiot-shirt.html"><p class="shop-item-title">idiot Shirt</p></a>
-    <p class="shop-item-title">please buy this Shirt</p>
+    <a href="idiot-shirt.html" target="_blank"><p class="shop-item-title">idiot Shirt</p></a>
+    <a href="Please buy this.html" target="_blank"><p class="shop-item-title">please buy this Shirt</p></a>
     <p class="shop-item-title">i paid money for this Shirt</p>
     <img src="images\I scream.png" class="grid-item">
     <img src="images\Buy this now.png" class="grid-item">
