--- a/please-buy-this.html
+++ b/please-buy-this.html
@@ -15,7 +15,7 @@
       <a href="about.html"><div class="gridthing">ABOUT</div></a>
       <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
-    <h1 class="lessfattext" >idiot Shirt</h1>
+    <h1 class="lessfattext">Please buy this shirt</h1>
     <img src="images\Please buy this.png" align="left" class="product-image">
     <p>please we need money to fuel our crippling gambling addictions</p><br>
     <p>COST:</p>
