--- a/please-buy-this.html
+++ b/please-buy-this.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet">
-    <title>UPSILAMBA - idiot Shirt</title>
+    <title>UPSILAMBA - please buy this Shirt</title>
     <link rel="shortcut icon" href="images/icon.png">
   </head>
 
