--- a/shop.html
+++ b/shop.html
@@ -27,10 +27,10 @@
     <a href="i-paid-money.html"><p class="shop-item-title">i paid money for this Shirt</p></a>
     <img src="images\I scream.png" class="grid-item">
     <img src="images\Buy this now.png" class="grid-item">
-    <img src="images\Frog in space.png" class="grid-item">
+    <a href="frog-in-space.html"><img src="images\Frog in space.png" class="grid-item"></a>
     <p class="shop-item-title">i scream but no one can hear Shirt</p>
     <p class="shop-item-title">BUY THIS NOW!!!!!!!!! Shirt</p>
-    <p class="shop-item-title">frog in space Shirt</p>
+    <a href="frog-in-space.html"><p class="shop-item-title">frog in space Shirt</p></a>
   </div>
   <div id="footer">
     <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
