--- a/i-paid-money.html
+++ b/i-paid-money.html
@@ -16,7 +16,7 @@
       <a href="contact.html"><div class="gridthing">CONTACT</div></a>
     </div>
     <h1 class="lessfattext">i paid money for this shirt</h1>
-    <img src="images\Please buy this.png" align="left" class="product-image">
+    <img src="images\I paid money for this.png" align="left" class="product-image">
     <p>if you buy this shirt you can flex on your broke friends named jared and kyle! (especially jared fuck you jared)</p><br>
     <p>COST:</p>
     <p class="cost">$99</p>
