--- a/frog-in-space.html
+++ b/frog-in-space.html
@@ -17,7 +17,7 @@
     </div>
     <h1 class="lessfattext">frog in space Shirt</h1>
     <img src="images\Frog in space.png" align="left" class="product-image">
-    <p>cool frog in cool space!!1</p><br>
+    <p>cool frog in cool space!!1 be awsome!!!!!!</p><br>
     <p>COST:</p>
     <p class="cost">$29</p>
     <p>to purchase please email send.me.ur.food@gmail.com</p>
