--- a/shop.html
+++ b/shop.html
@@ -26,10 +26,10 @@
     <a href="please-buy-this.html"><p class="shop-item-title">please buy this Shirt</p></a>
     <a href="i-paid-money.html"><p class="shop-item-title">i paid money for this Shirt</p></a>
     <a href="i-scream.html"><img src="images\I scream.png" class="grid-item"></a>
-    <img src="images\Buy this now.png" class="grid-item">
+    <a href="buy-this-now.html"><img src="images\Buy this now.png" class="grid-item"></a>
     <a href="frog-in-space.html"><img src="images\Frog in space.png" class="grid-item"></a>
     <a href="i-scream.html"><p class="shop-item-title">i scream but no one can hear Shirt</p></a>
-    <p class="shop-item-title">BUY THIS NOW!!!!!!!!! Shirt</p>
+    <a href="buy-this-now.html"><p class="shop-item-title">BUY THIS NOW!!!!!!!!! Shirt</p></a>
     <a href="frog-in-space.html"><p class="shop-item-title">frog in space Shirt</p></a>
   </div>
   <div id="footer">
