--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,9 @@
     <div class="contact">Call us at:</div>
     <div class="contact">Tweet us at:</div>
     <div class="contact">Email us at:</div>
+    <div class="actual-contact">Call us at:</div>
+    <div class="actual-contact">Tweet us at:</div>
+    <div class="actual-contact">Email us at:</div>
 
     <div id="footer">
       <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
@@ -114,7 +117,7 @@ body {
   }
   .contact {
     width: calc(33% - 56px);
-    height: 100px;
+    height: 50px;
     text-align: center;
     float: left;
     position: relative;
