--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
     <div class="contact">Call us at:</div>
     <div class="contact">Tweet us at:</div>
     <div class="contact">Email us at:</div>
-    <div class="actual-contact">Call us at:</div>
-    <div class="actual-contact">Tweet us at:</div>
-    <div class="actual-contact">Email us at:</div>
+    <div class="actual-contact">(612)-790-0434</div>
+    <div class="actual-contact" href="https://twitter.com/nopechef">@nopechef:</div>
+    <div class="actual-contact">epet2202@mpsedu.org</div>
 
     <div id="footer">
       <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
