--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
     <div class="contact">Tweet us at:</div>
     <div class="contact">Email us at:</div>
     <div class="actual-contact">(612)-790-0434</div>
-    <div class="actual-contact" href="https://twitter.com/nopechef">@nopechef:</div>
-    <div class="actual-contact">epet2202@mpsedu.org</div>
+    <a class="actual-contact" href="https://twitter.com/nopechef">@nopechef</div>
+    <div class="actual-contact">Email us at:</div>
 
     <div id="footer">
       <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
@@ -117,7 +117,7 @@ body {
   }
   .contact {
     width: calc(33% - 56px);
-    height: 50px;
+    height: 80px;
     text-align: center;
     float: left;
     position: relative;
@@ -128,6 +128,16 @@ body {
     background-color: #c72c41;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 36px;
+  }
+
+  .actual-contact {
+    color: #ffffff;
+    font-family: 'Lexend Deca', sans-serif;
+    font-size: 24px;
+    text-align: center;
+    width: calc(33% - 56px);
+    float: left;
+    position: relative;
   }
 
   </style>
