--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <div class="contact">Tweet us at:</div>
     <div class="contact">Email us at:</div>
     <div class="actual-contact">(612)-790-0434</div>
-    <a class="actual-contact" href="https://twitter.com/nopechef">@nopechef</div>
+    <a class="actual-contact" href="https://twitter.com/nopechef">@nopechef</a>
     <div class="actual-contact">Email us at:</div>
 
     <div id="footer">
@@ -117,7 +117,7 @@ body {
   }
   .contact {
     width: calc(33% - 56px);
-    height: 80px;
+    height: 50px;
     text-align: center;
     float: left;
     position: relative;
@@ -131,6 +131,7 @@ body {
   }
 
   .actual-contact {
+    width: calc(33% - 56px);
     color: #ffffff;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 24px;
