--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <div class="contact">Email us at:</div>
     <div class="actual-contact">(612)-790-0434</div>
     <a class="actual-contact" href="https://twitter.com/nopechef">@nopechef</a>
-    <div class="actual-contact">Email us at:</div>
+    <div class="actual-contact">epet2202@mpsedu.org</div>
 
     <div id="footer">
       <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
@@ -139,6 +139,8 @@ body {
     width: calc(33% - 56px);
     float: left;
     position: relative;
+    margin: 20px 10px;
+    padding: 20px;
   }
 
   </style>
