--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
   }
 
   .image {
-    background-image: url("images\static.jpg");
+    background-image: url("images/static.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
