--- a/buy-this-now.html
+++ b/buy-this-now.html
@@ -18,7 +18,7 @@
     </div>
     <h1 class="lessfattext">BUY THIS NOW Shirt</h1>
     <img src="images\Buy this now.png" align="left" class="product-image">
-    <p>NOW!!!!!! OR ELSE!!!!!!</p><br>
+    <p>This shirt is extremely <a class="scratch" href="scratch.html>itchy.</a></p><br>
     <p>COST:</p>
     <p class="cost">$109</p>
     <p>to purchase please email send.me.ur.food@gmail.com</p>
@@ -27,4 +27,15 @@
       <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
     </div>
   </body>
+  <style>
+    .scratch:link {
+      text-decoration: none;
+    }
+    .scratch:visited {
+      text-decoration: none;
+    }
+    .scratch:hover {
+      text-decoration: underline #ffffff;
+    }
+  </style>
 </html>
