--- a/buy-this-now.html
+++ b/buy-this-now.html
@@ -18,7 +18,7 @@
     </div>
     <h1 class="lessfattext">BUY THIS NOW Shirt</h1>
     <img src="images\Buy this now.png" align="left" class="product-image">
-    <p>This shirt is extremely</p><a class="scratch" href="scratch.html">itchy.</a><br>
+    <p>This shirt is extremely<a class="scratch" href="scratch.html">itchy.</a></p><br>
     <p>COST:</p>
     <p class="cost">$109</p>
     <p>to purchase please email send.me.ur.food@gmail.com</p>
