--- a/scratch.html
+++ b/scratch.html
@@ -7,7 +7,7 @@
   <iframe src="https://scratch.mit.edu/projects/329822448/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen>fuck</iframe>
 </body>
 <style>
-  body {
+  body, a {
     background-color: #222222;
     color: #ffffff;
   }
