--- a/contact.html
+++ b/contact.html
@@ -139,8 +139,13 @@ body {
     width: calc(33% - 56px);
     float: left;
     position: relative;
-    margin: 40px 10px;
+    margin: 20px 10px;
     padding: 20px;
+    transition: all .2s ease-in-out;
+  }
+
+  .actual-contact:hover {
+    transform: scale(1.3);
   }
 
   </style>
