--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
     <div class="contact">Call us at:</div>
     <div class="contact">Tweet us at:</div>
     <div class="contact">Email us at:</div>
-    <div class="actual-contact">(612)-790-0434</div>
+    <a class="actual-contact" href="https://www.yellowpages.com/">(612)-516-7773</a>
     <a class="actual-contact" href="https://twitter.com/nopechef">@nopechef</a>
-    <div class="actual-contact">epet2202@mpsedu.org</div>
+    <a class="actual-contact" href="mailto:epet2202mpsedu.org">epet2202@mpsedu.org</a>
 
     <div id="footer">
       <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
@@ -141,6 +141,11 @@ body {
     position: relative;
     margin: 20px 10px;
     padding: 20px;
+    transition: all .2s ease-in-out;
+  }
+
+  .actual-contact:hover {
+    transform: scale(1.3);
   }
 
   </style>
