--- a/shop.html
+++ b/shop.html
@@ -43,7 +43,7 @@
     min-height: calc(100vh - 60px);
     position: relative;
   }
-  
+
   p {
     color: #2d132c;
     font-family: 'Lexend Deca', sans-serif;
@@ -90,6 +90,11 @@
     font-size: 30px;
     width: 300px;
     justify-items: center;
+    transition: all .2s ease-in-out;
+  }
+
+  .grid-item:hover {
+    transform: scale(1.3);
   }
 
   .gridthing {
@@ -176,6 +181,11 @@
         justify-items: center;
     display: inline-block;
     margin-bottom: 100px;
+    transition: all .2s ease-in-out;
+  }
+
+  .shop-item-title:hover {
+    transform: scale(1.3);
   }
 
 
