--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
     background-color: #801336;
     min-height: calc(100vh - 61px);
     position: relative;
+    overflow: hidden;
   }
 
     body::after {
