--- a/idiot-shirt.html
+++ b/idiot-shirt.html
@@ -19,6 +19,13 @@
     <h1 class="lessfattext" >idiot Shirt</h1>
     <img src="images\Idiot.png" align="left" class="product-image">
     <p>This shirt was inspired by my friend ethan.</p><br>
+    <select>
+      <option value="plzselect">Select a color:</option>
+      <option value="blue">Blue</option>
+      <option value="turquoise">Turquoise</option>
+      <option value="teal">Teal</option>
+      <option value="ultramarine">Ultramarine</option>
+    </select>
     <p>COST:</p>
     <p class="cost">$79</p>
     <p>to purchase please email send.me.ur.food@gmail.com</p>
