--- a/buy-this-now.html
+++ b/buy-this-now.html
@@ -21,6 +21,14 @@
     <p>This shirt is extremely <a class="scratch" href="scratch.html">itchy.</a></p><br>
     <p>COST:</p>
     <p class="cost">$109</p>
+    <div class="dropdown">
+      <button class="dropdownbtn">Dropdown</button>
+      <div class="dropdown-content">
+        <p>Blue</p>
+        <p>Teal</p>
+        <p>Turquoise</p>
+      </div>
+</div>
     <p>to purchase please email send.me.ur.food@gmail.com</p>
 
     <div id="footer">
