--- a/buy-this-now.html
+++ b/buy-this-now.html
@@ -19,16 +19,17 @@
     <h1 class="lessfattext">BUY THIS NOW Shirt</h1>
     <img src="images\Buy this now.png" align="left" class="product-image">
     <p>This shirt is extremely <a class="scratch" href="scratch.html">itchy.</a></p><br>
+    <div class="blueselector">
+      <select>
+        <option value="plzselect">Select a color:</option>
+        <option value="blue">Blue</option>
+        <option value="turquoise">Turquoise</option>
+        <option value="teal">Teal</option>
+        <option value="ultramarine">Ultramarine</option>
+      </select>
+    </div>
     <p>COST:</p>
     <p class="cost">$109</p>
-    <div class="dropdown">
-      <button class="dropdownbtn">Dropdown</button>
-      <div class="dropdown-content">
-        <p>Blue</p>
-        <p>Teal</p>
-        <p>Turquoise</p>
-      </div>
-</div>
     <p>to purchase please email send.me.ur.food@gmail.com</p>
 
     <div id="footer">
