--- a/frog-in-space.html
+++ b/frog-in-space.html
@@ -19,6 +19,15 @@
     <h1 class="lessfattext">frog in space Shirt</h1>
     <img src="images\Frog in space.png" align="left" class="product-image">
     <p>cool frog in cool space!!1 be awsome!!!!!!</p><br>
+    <div class="blueselector">
+      <select>
+        <option value="plzselect">Select a color:</option>
+        <option value="blue">Blue</option>
+        <option value="turquoise">Turquoise</option>
+        <option value="teal">Teal</option>
+        <option value="ultramarine">Ultramarine</option>
+      </select>
+    </div>
     <p>COST:</p>
     <p class="cost">$29</p>
     <p>to purchase please email send.me.ur.food@gmail.com</p>
