--- a/i-paid-money.html
+++ b/i-paid-money.html
@@ -19,6 +19,15 @@
     <h1 class="lessfattext">i paid money for this shirt</h1>
     <img src="images\I paid money for this.png" align="left" class="product-image">
     <p>if you buy this shirt you can flex on your broke friends named jared and kyle! (especially jared fuck you jared)</p><br>
+    <div class="blueselector">
+      <select>
+        <option value="plzselect">Select a color:</option>
+        <option value="blue">Blue</option>
+        <option value="turquoise">Turquoise</option>
+        <option value="teal">Teal</option>
+        <option value="ultramarine">Ultramarine</option>
+      </select>
+    </div>
     <p>COST:</p>
     <p class="cost">$99</p>
     <p>to purchase please email send.me.ur.food@gmail.com</p>
