--- a/i-scream.html
+++ b/i-scream.html
@@ -19,6 +19,15 @@
     <h1 class="lessfattext">i scream but no one can hear shirt</h1>
     <img src="images\I scream.png" align="left" class="product-image">
     <p>buy this shirt to tell everyone that you are nice and approachable</p><br>
+    <div class="blueselector">
+      <select>
+        <option value="plzselect">Select a color:</option>
+        <option value="blue">Blue</option>
+        <option value="turquoise">Turquoise</option>
+        <option value="teal">Teal</option>
+        <option value="ultramarine">Ultramarine</option>
+      </select>
+    </div>
     <p>COST:</p>
     <p class="cost">$29</p>
     <p>to purchase please email send.me.ur.food@gmail.com</p>
