--- a/please-buy-this.html
+++ b/please-buy-this.html
@@ -19,6 +19,15 @@
     <h1 class="lessfattext">please buy this shirt</h1>
     <img src="images\Please buy this.png" align="left" class="product-image">
     <p>please we need money to fuel our crippling gambling addictions</p><br>
+    <div class="blueselector">
+      <select>
+        <option value="plzselect">Select a color:</option>
+        <option value="blue">Blue</option>
+        <option value="turquoise">Turquoise</option>
+        <option value="teal">Teal</option>
+        <option value="ultramarine">Ultramarine</option>
+      </select>
+    </div>
     <p>COST:</p>
     <p class="cost">$39</p>
     <p>to purchase please email send.me.ur.food@gmail.com</p>
