--- a/i-paid-money.html
+++ b/i-paid-money.html
@@ -28,6 +28,11 @@
         <option value="ultramarine">Ultramarine</option>
       </select>
     </div>
+    <div class="amountselector">
+      <form action="/action_page.php">
+        <input type="number" name="howmany" value="1">
+      </form>
+    </div>
     <p>COST:</p>
     <p class="cost">$99</p>
     <p>to purchase please email send.me.ur.food@gmail.com</p>
