--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
       <div class="center">
         <span class="float">about upsilamba</span>
         <div class="space"></div>
-        <span class="maintext">UPSILAMBA is an innovative shirt design company. We are a down-to-earth organization, that understands the desires of the many. We know what you want. By using predicative algorithms, we can determine exactly the kind of design the average consumer wants to buy. Using these algorithms, we have produced 6 perfect shirt designs, one for each blood type.</span>
+        <div class="maintext">UPSILAMBA is an innovative shirt design company. We are a down-to-earth organization, that understands the desires of the many. We know what you want. By using predicative algorithms, we can determine exactly the kind of design the average consumer wants to buy. Using these algorithms, we have produced 6 perfect shirt designs, one for each blood type.</div>
+        <div class="space"></div>
         <span class="about-text">we make shirts</span>
       </div
     </div>
@@ -132,7 +133,6 @@
     font-family: 'Lexend Deca', sans-serif;
     font-size: 22px;
     padding: 10px;
-    border: 10px black solid;
     background-color: #c72c41;
     max-width: 60%;
   }
