--- a/please-buy-this.html
+++ b/please-buy-this.html
@@ -36,7 +36,7 @@
     <p>to purchase please email send.me.ur.food@gmail.com</p>
 
     <div id="footer">
-      <a href="https://twitter.com/nopechef"><p>follow us on tiwtter</p></a>
+      <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
     </div>
   </body>
   <script>
