--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       <div class="center">
         <span class="float">about upsilamba</span>
         <div class="space"></div>
-        <div class="maintext">UPSILAMBA is an innovative shirt design company. We are a down-to-earth organization, that understands the desires of the many. We know what you want. By using predicative algorithms, we can determine exactly the kind of design the average consumer wants to buy. Using these algorithms, we have produced 6 perfect shirt designs, one for each blood type.</div>
+        <span class="maintext">UPSILAMBA is an innovative shirt design company. We are a down-to-earth organization, that understands the desires of the many. We know what you want. By using predicative algorithms, we can determine exactly the kind of design the average consumer wants to buy. Using these algorithms, we have produced 6 perfect shirt designs, one for each blood type.</span>
         <div class="space"></div>
         <span class="about-text">we make shirts</span>
       </div
@@ -126,6 +126,7 @@
     padding: 10px;
     background-color: #c72c41;
     margin-bottom: 40px;
+    letter-spacing: 2px;
   }
 
   .maintext {
@@ -134,8 +135,11 @@
     font-size: 22px;
     padding: 10px;
     background-color: #c72c41;
-    max-width: 60%;
+    max-width: 50%;
     text-align: center;
+    display: inline-block;
+    line-height: 250%;
+    letter-spacing: 2px;
   }
 
   .about-text {
@@ -145,6 +149,7 @@
     font-size: 24px;
     padding: 10px;
     background-color: #c72c41;
+    letter-spacing: 2px;
   }
 
   .center {
