--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
       <div class="center">
         <span class="float">about upsilamba</span>
         <div class="space"></div>
-        <span class="maintext">UPSILAMBA is an innovative shirt design company. We are a down-to-earth organization, that understands the desires of the many. We know what you want. By using predicative algorithms, we can determine exactly the kind of design the average consumer wants to buy. Using these algorithms, we have produced 6 perfect shirt designs, one for each blood type. Check them out in the <a href="shop.html">SHOP</a>.</span>
+        <span class="maintext">UPSILAMBA is an innovative shirt design company. We are a down-to-earth organization, that understands the desires of the many. We know what you want. By using predicative algorithms, we can determine exactly the kind of design the average consumer wants to buy. Using these algorithms, we have produced 6 perfect shirt designs, one for each blood type. Check them out in the <a href="shop.html" id="shop">SHOP</a>.</span>
         <div class="space"></div>
         <span class="about-text">we make shirts</span>
       </div
@@ -166,6 +166,7 @@
 
   a:link {
     text-decoration: none;
+
   }
   a:visited {
     text-decoration: none;
@@ -173,6 +174,10 @@
 
   a:hover {
     text-decoration: underline #801336;
+  }
+
+  #shop {
+    color: white;
   }
   </style>
 </html>
