--- a/buy-this-now.html
+++ b/buy-this-now.html
@@ -41,8 +41,8 @@
   </body>
   <script>
     function getNumbah() {
-      var yeah = document.getElementById('numbah').value;
-      document.getElementById("cost").innerHTML = "$" + yeah * 109;
+      var yeah = document.getElementById('numbah').value * 109;
+      document.getElementById("cost").innerHTML = "$" + yeah.toLocaleString();
     }
   </script>
 </html>
