--- a/i-scream.html
+++ b/i-scream.html
@@ -41,8 +41,8 @@
   </body>
   <script>
     function getNumbah() {
-      var yeah = document.getElementById('numbah').value;
-      document.getElementById("cost").innerHTML = "$" + yeah * 29;
+      var yeah = document.getElementById('numbah').value * 29;
+      document.getElementById("cost").innerHTML = "$" + yeah.toLocaleString();
     }
   </script>
 </html>
