--- a/please-buy-this.html
+++ b/please-buy-this.html
@@ -41,8 +41,8 @@
   </body>
   <script>
     function getNumbah() {
-      var yeah = document.getElementById('numbah').value;
-      document.getElementById("cost").innerHTML = "$" + yeah * 39;
+      var yeah = document.getElementById('numbah').value * 39;
+      document.getElementById("cost").innerHTML = "$" + yeah.toLocaleString();
     }
   </script>
 </html>
