--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <div class="contact">Email us at:</div>
     <a class="actual-contact" href="https://www.yellowpages.com/">(612)-516-7773</a>
     <a class="actual-contact" href="https://twitter.com/nopechef">@nopechef</a>
-    <a class="actual-contact" href="mailto:epet2202mpsedu.org">epet2202@mpsedu.org</a>
+    <a class="actual-contact" href="mailto:epet2202@mpsedu.org">epet2202@mpsedu.org</a>
 
     <div id="footer">
       <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
