--- a/buy-this-now.html
+++ b/buy-this-now.html
@@ -33,7 +33,7 @@
     </div>
     <p>COST:</p>
     <p id="cost">$109</p>
-    <a class="purchase=button" href="mailto:epet2201@mpsedu.org?Subject=LET%20ME%20BUY%20A%20SHIRT!!!!!!!!!!!!!!!!!!!!>PURCHASE</a>
+    <a class="purchase-button" href="mailto:epet2201@mpsedu.org?Subject=LET%20ME%20BUY%20A%20SHIRT!!!!!!!!!!!!!!!!!!!!>PURCHASE</a>
 
     <div id="footer">
       <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
