--- a/buy-this-now.html
+++ b/buy-this-now.html
@@ -33,8 +33,7 @@
     </div>
     <p>COST:</p>
     <p id="cost">$109</p>
-    <a class="purchase-button" href="mailto:epet2202@mpsedu.org?Subject=LET%20ME%20BUY%20A%20SHIRT!!!!!!!!!!!!!!!!!!!!"><p>PURCHASE</p></a>
-
+    <p>to purchase please email send.me.ur.food@gmail.com</p>
     <div id="footer">
       <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
     </div>
