--- a/frog-in-space.html
+++ b/frog-in-space.html
@@ -26,6 +26,10 @@
         <option value="turquoise">Turquoise</option>
         <option value="teal">Teal</option>
         <option value="ultramarine">Ultramarine</option>
+        <option value="baby blue">Baby Blue</option>
+        <option value="azure">Azure</option>
+        <option value="sky">Sky Blue</option>
+        <option value="cyan">Cyan</option>
       </select>
     </div>
     <div class="amountselector">
