--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ function makeNewPosition(){
 
 function animateDiv(){
     var newq = makeNewPosition();
-    $('.a').animate({ top: newq[0], left: newq[1] }, function(){
+    $('.a').animate({ top: newq[0], left: newq[1] }, 1000, function(){
       animateDiv();        
     });
     
