--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <p id="definition">1. happiness and excitement</p>
     <p>UPSILAMBA is more than just a clothing brand. It is a message, a movement, and a money laundering buisness. Please buy our products to fund our criminal enterprise!</p>
-        <button class="a" src="https://www.google.com/search?q=pranked&safe=strict&client=firefox-b-1-d&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjY5razlIbnAhUwrlkKHa5TDgAQ_AUoAXoECA4QAw&biw=1920&bih=966#imgrc=lr-bcYV7X0zW-M:">click me for free money!!!</button>
+        <button class="a" onclick="window.location.href = 'https://www.google.com/search?q=pranked&safe=strict&client=firefox-b-1-d&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjY5razlIbnAhUwrlkKHa5TDgAQ_AUoAXoECA4QAw&biw=1920&bih=966#imgrc=lr-bcYV7X0zW-M:';">click me for free money!!!</button>
     <div id="footer">
       <a href="https://twitter.com/nopechef" target="_blank"><p>follow us on tiwtter</p></a>
     </div>
