--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
     width: 100px;
     height: 50px;
     position: fixed;
+    border: 10px solid #2d132c;
+    background-color: #c72c41;
   }
   </style>
   <script>
